<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="login"
            type="com.example.moveeapp.ui.modules.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".ui.modules.login.view.LoginFragment">

        <ImageView
            android:id="@+id/login_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100dp"
            android:src="@drawable/ic_movee_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/dimen_0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/login_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_start_end"
            android:layout_marginTop="@dimen/dimen_70dp"
            android:layout_marginEnd="@dimen/padding_margin_start_end"
            android:orientation="vertical"
            android:padding="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_app_icon">

            <TextView
                style="@style/White_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_email" />

            <EditText
                android:id="@+id/login_userName"
                style="@style/White_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@{login.userName}"/>

            <TextView
                style="@style/White_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_txt_height_margin_top"
                android:text="@string/login_screen_password"
                tools:text="Password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <EditText
                    android:id="@+id/login_password"
                    style="@style/White_17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:inputType="textPassword"
                    android:text="@{login.password}"
                    app:endIconMode="password_toggle" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_txt_forgot_password"
                style="@style/White_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_txt_height_margin_top"
                android:gravity="end"
                android:text="@string/login_forgot_password"
                android:textColorLink="@color/colorWhite" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn_login"
            style="@style/Bold_Vibrant_17"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_marginStart="@dimen/padding_margin_start_end"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/padding_margin_start_end"
            android:background="@color/colorWhite"
            android:text="@string/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_linear_layout" />

        <Button
            android:id="@+id/login_btn_guest"
            style="@style/Bold_Vibrant_17"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_marginStart="@dimen/padding_margin_start_end"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/padding_margin_start_end"
            android:background="@color/colorWhite"
            android:text="@string/guest_button"
            app:layout_constraintTop_toBottomOf="@id/login_btn_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/login_btn_guest">

            <TextView
                style="@style/Grey_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/login_txt_registerNow"
                style="@style/Bold_White_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_8"
                android:text="@string/login_register_now"
                android:textColorLink="@color/colorWhite" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
