<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.about.AboutFragment">

    <TextView
        android:id="@+id/about_movie"
        style="@style/Bold_White_30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        android:background="@color/vibrant_blue"
        android:gravity="center"
        android:text="@string/about_movee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_created_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/about_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_created_by"
        android:layout_marginStart="@dimen/margin_16"
        style="@style/Black_15"/>

    <TextView
        android:id="@+id/licenses"
        style="@style/Black_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_created_by"
        android:layout_marginStart="@dimen/margin_16"
       />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/licenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16">

        <ListView
            android:id="@+id/licenses_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingBottom="@dimen/dimens_130dp"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
