<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.main.view.SearchFragment">

    <LinearLayout
        android:id="@+id/search_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_210"
        android:background="@color/vibrant_blue"
        android:orientation="vertical"
        android:padding="@dimen/visions_movie_linearlayout_height"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Bold_White_41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_start_end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="@dimen/text_width"
                android:layout_height="@dimen/linear_layout_margin_bottom"
                android:background="@drawable/shape_search"
                android:drawablePadding="@dimen/margin_8"
                android:gravity="center_vertical"
                android:hint="@string/hint_movies_or_series"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:drawableStartCompat="@drawable/ic_icon_mini_search" />

            <TextView
                android:id="@+id/search_cancel"
                style="@style/White_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/txt_search_cancel" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/search_img_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_no_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_linear_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_recyclerview_height"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>